--- a/shadow/main.css
+++ b/shadow/main.css
@@ -1,15 +1,115 @@
-.YIN {
-    font-size: 40px;
+
+body{
+    background-color: #000000;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    overflow: visible;
 }
 
-.YI {
-    font-size: 40px;
-}
+.element {
 
-.LI {
-    font-size: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: 100%; 
 }
-
-.ZAN {
-    font-size: 40px
+  
+.element .element-wrapper {
+    width: 100%;
+    height: 100%;
 }
+  
+.element .div {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    background-color: #000000;
+    overflow: hidden;
+  }
+  
+  .element .text-wrapper {
+    width: 50%;
+    top: -5%;
+    left: -2%;
+    filter: blur(10px);
+    opacity: 0.7;
+    color: #ffffff;
+    font-size: 30em;
+    white-space: nowrap;
+    position: relative;
+    font-family: "biz-udpmincho", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .element .text-wrapper-2 {
+    width: 50%;
+    bottom: -5%;
+    left: -2%;
+    filter: blur(10px);
+    opacity: 0.7;
+    color: #ffffff;
+    font-size: 30em;
+    color: #ffffff;
+    white-space: nowrap;
+    position: absolute;
+    font-family: "biz-udpmincho", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .element .text-wrapper-3 {
+    width: -50%;
+    top: -5%;
+    right: -2%;
+    filter: blur(10px);
+    opacity: 0.7;
+    color: #ffffff;
+    font-size: 30em;
+    color: #ffffff;
+    white-space: nowrap;
+    position: absolute;
+    font-family: "biz-udpmincho", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .element .text-wrapper-4 {
+    width: -50%;
+    bottom: -5%;
+    right: -2%;
+    filter: blur(10px);
+    opacity: 0.7;
+    color: #ffffff;
+    font-size: 30em;
+    color: #ffffff;
+    white-space: nowrap;
+    position: absolute;
+    font-family: "biz-udpmincho", sans-serif;
+font-weight: 400;
+font-style: normal;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .element .text-wrapper-5 {
+    width: 42px;
+    top: 304px;
+    left: 735px;
+    color: #d0d0d0;
+    font-size: 48px;
+    position: absolute;
+    font-family: "biz-udpmincho", sans-serif;
+font-weight: 400;
+font-style: normal;
+    letter-spacing: 0;
+    line-height: normal;
+  }
