--- a/homepage/main.css
+++ b/homepage/main.css
@@ -1,6 +1,7 @@
 body {
   background-attachment: fixed;
   background-image: url("hpbk.jpg");
+  background-color: rgba(255, 255, 255, 0.5);
   background-size: cover; 
   background-repeat: no-repeat; 
   background-position: center; 
